extend client-side validation, add loaders, add locale to Bogus

--- a/Client/src/app/create-client/create-client.component.html
+++ b/Client/src/app/create-client/create-client.component.html
@@ -12,22 +12,50 @@
           id="firstName"
           class="validate"
           type="text"
+          pattern="^[A-Za-z]*$"
           formControlName="firstName"
           required
         />
         <label for="firstName">First Name</label>
-        <span class="helper-text" data-error="Field is required."></span>
+        <span
+          *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)"
+        >
+          <span
+            class="helper-text"
+            data-error="Field is required."
+            *ngIf="firstName?.errors?.['required']"
+          ></span>
+          <span
+            class="helper-text red-text"
+            *ngIf="firstName?.errors?.['pattern']"
+            >Not a valid first name</span
+          >
+        </span>
       </div>
       <div class="input-field col s6">
         <input
           id="lastName"
           class="validate"
           type="text"
+          pattern="^[A-Za-z]*$"
           formControlName="lastName"
           required
         />
         <label for="lastName">Last Name</label>
-        <span class="helper-text" data-error="Field is required."></span>
+        <span
+          *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)"
+        >
+          <span
+            class="helper-text"
+            data-error="Field is required."
+            *ngIf="lastName?.errors?.['required']"
+          ></span>
+          <span
+            class="helper-text red-text"
+            *ngIf="lastName?.errors?.['pattern']"
+            >Not a valid last name</span
+          >
+        </span>
       </div>
     </div>
     <div class="row" formGroupName="contactInfo">
@@ -36,6 +64,7 @@
           id="homeNumber"
           class="validate"
           type="text"
+          pattern="^[0-9]*$"
           formControlName="home"
         />
         <label for="homeNumber">Home Number</label>
@@ -49,6 +78,9 @@
             *ngIf="contactInfo?.errors?.['required']"
             >At least 1 number is required</span
           >
+          <span class="helper-text red-text" *ngIf="home?.errors?.['pattern']"
+            >Not a valid phone number</span
+          >
         </span>
       </div>
       <div class="input-field col s4">
@@ -56,6 +88,7 @@
           id="workNumber"
           class="validate"
           type="text"
+          pattern="^[0-9]*$"
           formControlName="work"
         />
         <label for="workNumber">Work Number</label>
@@ -69,6 +102,9 @@
             *ngIf="contactInfo?.errors?.['required']"
             >At least 1 number is required</span
           >
+          <span class="helper-text red-text" *ngIf="work?.errors?.['pattern']"
+            >Not a valid phone number</span
+          >
         </span>
       </div>
       <div class="input-field col s4">
@@ -76,6 +112,7 @@
           id="mobileNumber"
           class="validate"
           type="text"
+          pattern="^[0-9]*$"
           formControlName="mobile"
         />
         <label for="mobileNumber">Mobile Number</label>
@@ -88,6 +125,9 @@
             class="helper-text red-text"
             *ngIf="contactInfo?.errors?.['required']"
             >At least 1 number is required</span
+          >
+          <span class="helper-text red-text" *ngIf="mobile?.errors?.['pattern']"
+            >Not a valid phone number</span
           >
         </span>
       </div>
